<resources>
    <string name="app_name">Stox</string>

    <string name="stocks">Stocks List</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>

    <string name="range_select">Range select</string>
    <string name="three_months">3 months</string>
    <string name="six_months">6 months</string>
    <string name="one_year">1 year</string>
    <string name="three_year">3 years</string>

    <string name="dark_theme">Dark theme</string>
    <string name="version_label">Version</string>
    <string name="version">version %1$s.%2$d</string>

    <string name="last_dividend">Last dividend</string>
    <string name="sector">Sector</string>
    <string name="industry">Industry</string>

</resources>
